modif all the page

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -30,7 +30,7 @@
 					<a href="#contact">contact</a>
 				</li>
 				<li>
-					<a href="./login.html" id="login">login</a>
+					<a href="login.html" id="login">login</a>
 				</li>
 				<li>
 					<img src="./assets/icons/instagram.png" alt="Instagram" />
@@ -59,7 +59,6 @@
 			<a class="editBtn editBtn2">
 				<i class="fa-regular fa-pen-to-square"></i>modifier
 			</a>
-			</div>
 			<div class="modalContainer">
 				<div class="modal1">
 					<div class="flex-galery">
@@ -70,7 +69,7 @@
 						<div class="worksContainer"></div>
 						<div class="separator"></div>
 						<span class="addWork">Ajouter une photo</span>
-						<p>Supprimer la galeeie</p>
+						<p>Supprimer la galerie</p>
 					</div>
 				</div>
 
