--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -11,18 +11,18 @@
       rel="stylesheet"
     />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./FrontEnd/assets/style.css" />
-    <link rel="stylesheet" href="./FrontEnd/assets/log.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/login.css" />
   </head>
   <body>
     <header>
       <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
       <nav>
         <ul>
-          <li id="projets"><a href="./FrontEnd/index.html#portfolio">projets </a></li>
-          <li><a href="./FrontEnd/index.html#contact">contact </a></li>
-          <li id="login"><a href="./log.html">login </a></li>
-          <li><img src="./FrontEnd/assets/icons/instagram.png" alt="Instagram" /></li>
+          <li id="projets"><a href="./index.html#portfolio">projets </a></li>
+          <li><a href="./index.html#contact">contact </a></li>
+          <li id="login"><a href="./login.html">login </a></li>
+          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
     </header>
@@ -54,5 +54,5 @@
       </nav>
     </footer>
   </body>
-  <script src="./FrontEnd/log.js"></script>
+  <script src="./login.js"></script>
 </html>
