--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+
+    <link
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
@@ -79,13 +84,14 @@
           <div class="modal1">
             <div class="flex-galery">
               <span class="closeModal1">
-                <i class="fa-regular fa-xmark"></i>
+                <i class="material-symbols-outlined">
+                  close
+                </i>
               </span>
               <h2>Galerie photo</h2>
               <div class="worksContainer"></div>
               <div class="separator"></div>
               <span class="addWork">Ajouter une photo</span>
-              <p>Supprimer la galerie</p>
             </div>
           </div>
 
