--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -95,6 +95,12 @@
             </div>
           </div>
 
+          <div class="modal3">
+
+            <h2 class="TrashIcon">TEST</h2>
+            
+          </div>
+
           <div class="modal2">
             <button class="back">
               <i class="fa-regular fa-arrow-left-long"></i>
